log
Thu 14 Sep 2023 04:58:23 PM UTC: 
 tests:  1|8
total_score: 0/70
754875a
Thu 14 Sep 2023 05:22:23 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:51: error: expected ‘)’ before ‘;’ token
   41 |   TreeMap *map = (TreeMap*) malloc(sizeof(TreeMap);
      |                                   ~               ^
      |                                                   )
treemap.c:48:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   48 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:41:12: error: unused variable ‘map’ [-Werror=unused-variable]
   41 |   TreeMap *map = (TreeMap*) malloc(sizeof(TreeMap);
      |            ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
8256a77
Thu 14 Sep 2023 05:22:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:6: error: expected expression before ‘TreeMap’
   42 |   if(TreeMap==NULL)
      |      ^~~~~~~
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
treemap.c:42:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   42 |   if(TreeMap==NULL)
      |   ^~
treemap.c:47:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   47 |     return NULL;
      |     ^~~~~~
treemap.c:41:12: error: unused variable ‘map’ [-Werror=unused-variable]
   41 |   TreeMap *map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
a41ee9f
Thu 14 Sep 2023 05:23:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
treemap.c:42:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   42 |   if(map==NULL)
      |   ^~
treemap.c:47:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   47 |     return NULL;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
c39725b
Thu 14 Sep 2023 05:26:47 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
treemap.c:47:3: error: ‘new’ undeclared (first use in this function)
   47 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
f1d1048
Thu 14 Sep 2023 05:26:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
treemap.c:47:3: error: ‘new’ undeclared (first use in this function)
   47 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
9a56fb0
Thu 14 Sep 2023 05:27:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e52f4e8
Thu 14 Sep 2023 05:29:11 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9c88ebe
Thu 14 Sep 2023 05:29:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
treemap.c:47:3: error: ‘new’ undeclared (first use in this function)
   47 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
1273960
Thu 14 Sep 2023 05:33:27 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
treemap.c:47:3: error: ‘new’ undeclared (first use in this function)
   47 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
a8b1578
Thu 14 Sep 2023 05:33:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1aafcb4
Thu 14 Sep 2023 05:33:55 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   43 |     return;
      |     ^~~~~~
treemap.c:39:11: note: declared here
   39 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
treemap.c:47:3: error: ‘new’ undeclared (first use in this function)
   47 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:47:3: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
9d1f1eb
